<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#DFD9D9"
    app:cardBackgroundColor="#DFD9D9"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        style="@style/Widget.Design.FloatingActionButton"
        android:padding="5dp"
        app:cardBackgroundColor="#DFD9D9"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/flag_url"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="fitXY"
                />


            <TextView
                android:id="@+id/country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/flag_url"
                android:gravity="center"
                android:maxLines="2"
                android:paddingLeft="3dp"
                android:paddingTop="7dp"
                android:paddingRight="4dp"
                android:paddingBottom="3dp"
                android:textColor="#000000"
                android:textSize="22dp"
                android:text="@string/countryName"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/country_cases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_name"
                android:gravity="center"
                android:textColor="#5C00FF"
                android:text="@string/cases"
                android:textSize="17dp"
                android:maxLines="2" />


            <TextView
                android:id="@+id/country_death"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_cases"
                android:gravity="center"
                android:textColor="#FF0000"
                android:textSize="17dp"
                android:text="@string/deaths"
                android:maxLines="2" />

            <TextView
                android:id="@+id/country_recoverd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_death"
                android:gravity="center"
                android:textColor="#00FF07"
                android:textSize="17dp"
                android:text="@string/recovered"
                android:maxLines="2" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>